--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -139,17 +139,18 @@ SphereComponent=SphereComponent.Collision.Collision,
 TopDownCharacter_C=TopDownCharacter_C.Collision.Collision,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 AIbot_C=AIbot_C.Collision.Collision,
-K2Node_VariableGet=
+K2Node_VariableGet=TopDownCharacter_C.Collision.Collision,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 ObjectProperty=
 FloatProperty=
 Perception_C=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
-StructProperty=
+StructProperty=TopDownCharacter_C.Collision.Collision,
 BoolProperty=TopDownCharacter_C.Collision.Collision,
 ArrayProperty=
+IntProperty=TopDownCharacter_C.Collision.Collision,
+K2Node_VariableSet=TopDownCharacter_C.Collision.Collision,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/SpawnActor
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -177,18 +178,6 @@ LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
-OpenAssetsAtExit=/Game/AIAgent/TestPawn2.TestPawn2
-OpenAssetsAtExit=/Game/AIAgent/Proto_controller.Proto_controller
-OpenAssetsAtExit=/Game/AIAgent/ProtoTree.ProtoTree
-OpenAssetsAtExit=/Game/AIAgent/ProtoAI.ProtoAI
-OpenAssetsAtExit=/Game/AIAgent/NewController.NewController
-OpenAssetsAtExit=/Game/AIAgent/Perception.Perception
-OpenAssetsAtExit=/Game/AIAgent/MoveToPlayer.MoveToPlayer
-OpenAssetsAtExit=/Game/AIAgent/I_AI.I_AI
-OpenAssetsAtExit=/Game/AIAgent/MOveToTarget.MoveToTarget
-OpenAssetsAtExit=/Game/AIAgent/AttackPlayer.AttackPlayer
-OpenAssetsAtExit=/Game/SpawnActor/SpawnPoint.SpawnPoint
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -1652,6 +1641,128 @@ AttackPlayer_C.Description=True
 AttackPlayer_C.Task=True
 AttackPlayer_C.Default=True
 K2Node_CustomEvent.GraphNodeDetail=True
+BoxComponent.Variable=True
+BoxComponent.TransformCommon=True
+BoxComponent.Sockets=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.Rendering=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.Tags=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Cooking=True
+BoxComponent.Events=True
+REINST_TopDownCharacter_C_74.TransformCommon=True
+REINST_TopDownCharacter_C_74.Animation=True
+REINST_TopDownCharacter_C_74.Mesh=True
+REINST_TopDownCharacter_C_74.Clothing=True
+REINST_TopDownCharacter_C_74.Physics=True
+REINST_TopDownCharacter_C_74.Collision=True
+REINST_TopDownCharacter_C_74.ClothingSimulation=True
+REINST_TopDownCharacter_C_74.Lighting=True
+REINST_TopDownCharacter_C_74.Rendering=True
+REINST_TopDownCharacter_C_74.Tags=True
+REINST_TopDownCharacter_C_74.Activation=True
+REINST_TopDownCharacter_C_74.Cooking=True
+REINST_TopDownCharacter_C_74.Character Movement: Jumping / Falling=True
+REINST_TopDownCharacter_C_74.Character Movement (General Settings)=True
+REINST_TopDownCharacter_C_74.Character Movement: Walking=True
+REINST_TopDownCharacter_C_74.Character Movement: Swimming=True
+REINST_TopDownCharacter_C_74.Character Movement: Flying=True
+REINST_TopDownCharacter_C_74.Character Movement: Custom Movement=True
+REINST_TopDownCharacter_C_74.Character Movement (Rotation Settings)=True
+REINST_TopDownCharacter_C_74.Character Movement: Physics Interaction=True
+REINST_TopDownCharacter_C_74.Character Movement (Networking)=True
+REINST_TopDownCharacter_C_74.Character Movement=True
+REINST_TopDownCharacter_C_74.Character Movement: Avoidance=True
+REINST_TopDownCharacter_C_74.Character Movement: NavMesh Movement=True
+REINST_TopDownCharacter_C_74.RootMotion=True
+REINST_TopDownCharacter_C_74.NavMovement=True
+REINST_TopDownCharacter_C_74.Velocity=True
+REINST_TopDownCharacter_C_74.PlanarMovement=True
+REINST_TopDownCharacter_C_74.MovementComponent=True
+REINST_TopDownCharacter_C_74.Shape=True
+REINST_TopDownCharacter_C_74.Navigation=True
+REINST_TopDownCharacter_C_74.Character=True
+REINST_TopDownCharacter_C_74.Camera=True
+REINST_TopDownCharacter_C_74.Pawn=True
+REINST_TopDownCharacter_C_74.Input=True
+REINST_TopDownCharacter_C_74.Actor=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+REINST_TopDownCharacter_C_97.TransformCommon=True
+REINST_TopDownCharacter_C_97.Animation=True
+REINST_TopDownCharacter_C_97.Mesh=True
+REINST_TopDownCharacter_C_97.Clothing=True
+REINST_TopDownCharacter_C_97.Physics=True
+REINST_TopDownCharacter_C_97.Collision=True
+REINST_TopDownCharacter_C_97.ClothingSimulation=True
+REINST_TopDownCharacter_C_97.Lighting=True
+REINST_TopDownCharacter_C_97.Rendering=True
+REINST_TopDownCharacter_C_97.Tags=True
+REINST_TopDownCharacter_C_97.Activation=True
+REINST_TopDownCharacter_C_97.Cooking=True
+REINST_TopDownCharacter_C_97.Character Movement: Jumping / Falling=True
+REINST_TopDownCharacter_C_97.Character Movement (General Settings)=True
+REINST_TopDownCharacter_C_97.Character Movement: Walking=True
+REINST_TopDownCharacter_C_97.Character Movement: Swimming=True
+REINST_TopDownCharacter_C_97.Character Movement: Flying=True
+REINST_TopDownCharacter_C_97.Character Movement: Custom Movement=True
+REINST_TopDownCharacter_C_97.Character Movement (Rotation Settings)=True
+REINST_TopDownCharacter_C_97.Character Movement: Physics Interaction=True
+REINST_TopDownCharacter_C_97.Character Movement (Networking)=True
+REINST_TopDownCharacter_C_97.Character Movement=True
+REINST_TopDownCharacter_C_97.Character Movement: Avoidance=True
+REINST_TopDownCharacter_C_97.Character Movement: NavMesh Movement=True
+REINST_TopDownCharacter_C_97.RootMotion=True
+REINST_TopDownCharacter_C_97.NavMovement=True
+REINST_TopDownCharacter_C_97.Velocity=True
+REINST_TopDownCharacter_C_97.PlanarMovement=True
+REINST_TopDownCharacter_C_97.MovementComponent=True
+REINST_TopDownCharacter_C_97.Shape=True
+REINST_TopDownCharacter_C_97.Navigation=True
+REINST_TopDownCharacter_C_97.Character=True
+REINST_TopDownCharacter_C_97.Camera=True
+REINST_TopDownCharacter_C_97.Pawn=True
+REINST_TopDownCharacter_C_97.Input=True
+REINST_TopDownCharacter_C_97.Actor=True
+REINST_TopDownCharacter_C_112.TransformCommon=True
+REINST_TopDownCharacter_C_112.Animation=True
+REINST_TopDownCharacter_C_112.Mesh=True
+REINST_TopDownCharacter_C_112.Clothing=True
+REINST_TopDownCharacter_C_112.Physics=True
+REINST_TopDownCharacter_C_112.Collision=True
+REINST_TopDownCharacter_C_112.ClothingSimulation=True
+REINST_TopDownCharacter_C_112.Lighting=True
+REINST_TopDownCharacter_C_112.Rendering=True
+REINST_TopDownCharacter_C_112.Tags=True
+REINST_TopDownCharacter_C_112.Activation=True
+REINST_TopDownCharacter_C_112.Cooking=True
+REINST_TopDownCharacter_C_112.Character Movement: Jumping / Falling=True
+REINST_TopDownCharacter_C_112.Character Movement (General Settings)=True
+REINST_TopDownCharacter_C_112.Character Movement: Walking=True
+REINST_TopDownCharacter_C_112.Character Movement: Swimming=True
+REINST_TopDownCharacter_C_112.Character Movement: Flying=True
+REINST_TopDownCharacter_C_112.Character Movement: Custom Movement=True
+REINST_TopDownCharacter_C_112.Character Movement (Rotation Settings)=True
+REINST_TopDownCharacter_C_112.Character Movement: Physics Interaction=True
+REINST_TopDownCharacter_C_112.Character Movement (Networking)=True
+REINST_TopDownCharacter_C_112.Character Movement=True
+REINST_TopDownCharacter_C_112.Character Movement: Avoidance=True
+REINST_TopDownCharacter_C_112.Character Movement: NavMesh Movement=True
+REINST_TopDownCharacter_C_112.RootMotion=True
+REINST_TopDownCharacter_C_112.NavMovement=True
+REINST_TopDownCharacter_C_112.Velocity=True
+REINST_TopDownCharacter_C_112.PlanarMovement=True
+REINST_TopDownCharacter_C_112.MovementComponent=True
+REINST_TopDownCharacter_C_112.Shape=True
+REINST_TopDownCharacter_C_112.Navigation=True
+REINST_TopDownCharacter_C_112.Character=True
+REINST_TopDownCharacter_C_112.Camera=True
+REINST_TopDownCharacter_C_112.Pawn=True
+REINST_TopDownCharacter_C_112.Input=True
+REINST_TopDownCharacter_C_112.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -1690,10 +1801,10 @@ InstalledPlugins=Substance
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 Object=
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
-ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
+ShapeComponent=
 PrimitiveComponent=
 SceneComponent=
-ActorComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
+ActorComponent=
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -1713,8 +1824,8 @@ BTNode=
 AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
 TestPawn_C="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 NewController_C="\"Object.Controller.Controller"
-AIController="\"Object.Default.DebugColour\" \"Object.Controller.Controller|Transform\" \"Object.Replication.ReplicatedMovement\" "
-Controller="\"Object.Default.DebugColour\" \"Object.Controller.Controller|Transform\" \"Object.Replication.ReplicatedMovement\" "
+AIController="\"Object.Default.DebugColour\" \"Object.Controller.Controller"
+Controller="\"Object.Default.DebugColour\" \"Object.Controller.Controller"
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 TopDownCharacter_C=
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -1726,7 +1837,7 @@ BotAwareness="\"Struct.tempEnemies\" "
 FindPlayersInRange="\"Struct.TempEnemyArray\" "
 REINST_TestPawn2_C_198="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn2_C_212="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-Proto_controller_C="\"Object.Default.DebugColour\" \"Object.Controller.Controller|Transform\" \"Object.Replication.ReplicatedMovement\" "
+Proto_controller_C="\"Object.Default.DebugColour\" \"Object.Controller.Controller"
 REINST_TestPawn2_C_269="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn2_C_280="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn2_C_290="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -1756,7 +1867,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../My Documents/Github/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
+UNR=../../../../../../Users/wstan/Desktop/Github/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
