--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -194,7 +194,7 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Models/Aaron
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 
 [EditorStartup]
 LastLevel=/Game/Levels/BlockOut
@@ -1090,6 +1090,7 @@ MaterialExpressionLinearInterpolate.MaterialExpression=True
 MaterialExpression.MaterialExpression=True
 MaterialExpressionAdd.MaterialExpressionAdd=True
 MaterialExpressionAdd.MaterialExpression=True
+StaticMesh.EditableMesh=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -1130,6 +1131,7 @@ MaterialExpressionAdd.MaterialExpression=True
 /Game/Materials/SandstoneMat_Dark.SandstoneMat_Dark=1
 /Game/Materials/Water.Water=1
 /Game/Materials/SandstoneMat2.SandstoneMat2=1
+/Game/Models/Ben/1_handle_vase_Ben_Wilkinson_09-01-19.1_handle_vase_Ben_Wilkinson_09-01-19=1
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -1171,7 +1173,7 @@ FbxImportUI.Mesh=True
 Brush.BrushSettings=True
 
 [RootWindow]
-ScreenPosition=X=85.000 Y=264.000
+ScreenPosition=X=467.000 Y=162.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1795,8 +1797,8 @@ SequencerWidgets.TimeStamp=2018.05.14-10.37.26
 SequencerWidgets.LastCompileMethod=Unknown
 SynthBenchmark.TimeStamp=2018.05.14-10.37.28
 SynthBenchmark.LastCompileMethod=Unknown
-StaticMeshEditor.TimeStamp=2018.05.14-10.37.28
-StaticMeshEditor.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2018.10.05-18.09.42
+StaticMeshEditor.LastCompileMethod=External
 MagicLeap.TimeStamp=2018.10.05-19.44.02
 MagicLeap.LastCompileMethod=Unknown
 MagicLeapController.TimeStamp=2018.10.05-19.44.02
@@ -1915,15 +1917,15 @@ LastLogListing=FBXImport
 /Game/Models=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
 
 [PlacementMode]
-RecentlyPlaced=/Game/Models/Andrew/scaffold07-andrew-11-01-19.scaffold07-andrew-11-01-19;
+RecentlyPlaced=/Game/Models/Ben/1_handle_vase_Ben_Wilkinson_09-01-19.1_handle_vase_Ben_Wilkinson_09-01-19;
+RecentlyPlaced=/Game/Models/Ben/2_handle_vase_Ben_Wilkinson_09-01-19.2_handle_vase_Ben_Wilkinson_09-01-19;
+RecentlyPlaced=/Game/Models/Ben/small_vase_Ben_Wilkinson_09-01-19.small_vase_Ben_Wilkinson_09-01-19;
 RecentlyPlaced=/Game/Models/Ben/vase_light_damage_Ben_Wilkinson_09-01-19.vase_light_damage_Ben_Wilkinson_09-01-19;
+RecentlyPlaced=/Game/Models/Andrew/scaffold07-andrew-11-01-19.scaffold07-andrew-11-01-19;
 RecentlyPlaced=/Game/Models/Ben/half_vase_Ben_Wilkinson_09-01-19.half_vase_Ben_Wilkinson_09-01-19;
 RecentlyPlaced=/Game/Models/Aaron/campfire-aaroncrossley-12-01-19.campfire-aaroncrossley-12-01-19;
 RecentlyPlaced=/Game/Models/Ben/damaged_vase_Ben_Wilkinson_09-01-19.damaged_vase_Ben_Wilkinson_09-01-19;
-RecentlyPlaced=/Game/Models/Ben/small_vase_Ben_Wilkinson_09-01-19.small_vase_Ben_Wilkinson_09-01-19;
 RecentlyPlaced=/Game/Models/Ben/vase_undamaged_Ben_Wilkinson_09-01-19.vase_undamaged_Ben_Wilkinson_09-01-19;
-RecentlyPlaced=/Game/Models/Ben/2_handle_vase_Ben_Wilkinson_09-01-19.2_handle_vase_Ben_Wilkinson_09-01-19;
-RecentlyPlaced=/Game/Models/Ben/1_handle_vase_Ben_Wilkinson_09-01-19.1_handle_vase_Ben_Wilkinson_09-01-19;
 RecentlyPlaced=/Game/Models/Ben/pickaxe__ben_wilkinson_10-01-19.pickaxe__ben_wilkinson_10-01-19;
 RecentlyPlaced=/Game/Models/Ben/brazier_Ben_Wilkinson_10-01-19.brazier_Ben_Wilkinson_10-01-19;
 RecentlyPlaced=/Game/Models/Andrew/scaffold04-andrew-11-01-19.scaffold04-andrew-11-01-19;
@@ -2084,14 +2086,15 @@ ImportUniformScale=1.000000
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Levels/BlockOut
-MRUItem1=/Game/Materials/SandstoneMat2
-MRUItem2=/Game/Materials/Water
-MRUItem3=/Game/Materials/standstonenormal
-MRUItem4=/Game/Materials/SandstoneMat_Dark
-MRUItem5=/Game/Materials/standstone
-MRUItem6=/Game/Materials/SandstoneMat1
-MRUItem7=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem8=/Game/TopDownBP/Blueprints/TopDownCharacter2
+MRUItem1=/Game/Models/Ben/1_handle_vase_Ben_Wilkinson_09-01-19
+MRUItem2=/Game/Materials/SandstoneMat2
+MRUItem3=/Game/Materials/Water
+MRUItem4=/Game/Materials/standstonenormal
+MRUItem5=/Game/Materials/SandstoneMat_Dark
+MRUItem6=/Game/Materials/standstone
+MRUItem7=/Game/Materials/SandstoneMat1
+MRUItem8=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem9=/Game/TopDownBP/Blueprints/TopDownCharacter2
 
 [/Script/UnrealEd.FbxImportUI]
 LodDistance0=0.000000
