--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -196,7 +196,7 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Models/David
+ContentBrowserTab1.SelectedPaths=/Game/Models/Ben
 
 [EditorStartup]
 LastLevel=/Game/Levels/BlockOut
@@ -1134,6 +1134,8 @@ StaticMesh.EditableMesh=True
 /Game/Materials/Water.Water=1
 /Game/Materials/SandstoneMat2.SandstoneMat2=1
 /Game/Models/Ben/1_handle_vase_Ben_Wilkinson_09-01-19.1_handle_vase_Ben_Wilkinson_09-01-19=1
+/Game/Models/Andrew/scaffold02-andrew-11-01-19.scaffold02-andrew-11-01-19=1
+/Game/Models/Dylan/BallandChain1_Dylan_10-01-19__1_.BallandChain1_Dylan_10-01-19__1_=1
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -1919,26 +1921,26 @@ LastLogListing=FBXImport
 /Game/Models=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/Models/Andrew/scaffold05-andrew-11-01-19.scaffold05-andrew-11-01-19;
+RecentlyPlaced=/Game/Models/Andrew/scaffold06-andrew-11-01-19.scaffold06-andrew-11-01-19;
+RecentlyPlaced=/Game/Models/Dylan/RopeCoil_Dylan_10-01-19__1_.RopeCoil_Dylan_10-01-19__1_;
+RecentlyPlaced=/Game/Models/Ben/2_handle_vase_Ben_Wilkinson_09-01-19.2_handle_vase_Ben_Wilkinson_09-01-19;
 RecentlyPlaced=/Game/Models/David/crate-david-14-01-19.crate-david-14-01-19;
+RecentlyPlaced=/Game/Models/Ben/small_vase_Ben_Wilkinson_09-01-19.small_vase_Ben_Wilkinson_09-01-19;
+RecentlyPlaced=/Game/Models/Ben/cart_ben_wilkinson_10-01-19.cart_ben_wilkinson_10-01-19;
+RecentlyPlaced=/Game/Models/Aaron/campfire-aaroncrossley-12-01-19.campfire-aaroncrossley-12-01-19;
+RecentlyPlaced=/Game/Models/Andrew/scaffold01-andrew-11-01-19.scaffold01-andrew-11-01-19;
+RecentlyPlaced=/Game/Models/Ben/well_ben_wilkinson_10-01-19.well_ben_wilkinson_10-01-19;
+RecentlyPlaced=/Game/Models/Ben/cloth_cover_ben_wilkinson_10-01-19.cloth_cover_ben_wilkinson_10-01-19;
+RecentlyPlaced=/Game/Models/Chris/Cart_-_Chris_-_09-01-19.Cart_-_Chris_-_09-01-19;
+RecentlyPlaced=/Game/Models/Dylan/BallandChain1_Dylan_10-01-19__1_.BallandChain1_Dylan_10-01-19__1_;
+RecentlyPlaced=/Game/Models/Dylan/Shovel_Dylan_10-01-19.Shovel_Dylan_10-01-19;
+RecentlyPlaced=/Game/Models/Dylan/Pickaxe_Dylan_10-01-19.Pickaxe_Dylan_10-01-19;
+RecentlyPlaced=/Game/Models/Dylan/Vase_5_Dylan_09_01_19.Vase_5_Dylan_09_01_19;
+RecentlyPlaced=/Game/Models/Jack/Ladder-jack-14-01-19.Ladder-jack-14-01-19;
 RecentlyPlaced=/Game/Models/David/LP_Crate.LP_Crate;
 RecentlyPlaced=/Game/Models/David/02_-_Default.02_-_Default;
 RecentlyPlaced=/Game/Models/Ben/1_handle_vase_Ben_Wilkinson_09-01-19.1_handle_vase_Ben_Wilkinson_09-01-19;
-RecentlyPlaced=/Game/Models/Ben/2_handle_vase_Ben_Wilkinson_09-01-19.2_handle_vase_Ben_Wilkinson_09-01-19;
-RecentlyPlaced=/Game/Models/Ben/small_vase_Ben_Wilkinson_09-01-19.small_vase_Ben_Wilkinson_09-01-19;
-RecentlyPlaced=/Game/Models/Ben/vase_light_damage_Ben_Wilkinson_09-01-19.vase_light_damage_Ben_Wilkinson_09-01-19;
-RecentlyPlaced=/Game/Models/Andrew/scaffold07-andrew-11-01-19.scaffold07-andrew-11-01-19;
-RecentlyPlaced=/Game/Models/Ben/half_vase_Ben_Wilkinson_09-01-19.half_vase_Ben_Wilkinson_09-01-19;
-RecentlyPlaced=/Game/Models/Aaron/campfire-aaroncrossley-12-01-19.campfire-aaroncrossley-12-01-19;
-RecentlyPlaced=/Game/Models/Ben/damaged_vase_Ben_Wilkinson_09-01-19.damaged_vase_Ben_Wilkinson_09-01-19;
-RecentlyPlaced=/Game/Models/Ben/vase_undamaged_Ben_Wilkinson_09-01-19.vase_undamaged_Ben_Wilkinson_09-01-19;
-RecentlyPlaced=/Game/Models/Ben/pickaxe__ben_wilkinson_10-01-19.pickaxe__ben_wilkinson_10-01-19;
-RecentlyPlaced=/Game/Models/Ben/brazier_Ben_Wilkinson_10-01-19.brazier_Ben_Wilkinson_10-01-19;
-RecentlyPlaced=/Game/Models/Andrew/scaffold04-andrew-11-01-19.scaffold04-andrew-11-01-19;
-RecentlyPlaced=/Game/Models/Andrew/scaffold03-andrew-11-01-19.scaffold03-andrew-11-01-19;
-RecentlyPlaced=/Game/Models/Jack/Crystals_Tiny_Boi_1.Crystals_Tiny_Boi_1;
-RecentlyPlaced=/Game/Models/Jack/Crystals_Tiny_Boi_2.Crystals_Tiny_Boi_2;
-RecentlyPlaced=/Game/Models/Ben/cart_ben_wilkinson_10-01-19.cart_ben_wilkinson_10-01-19;
-RecentlyPlaced=/Game/Models/Andrew/scaffold09-andrew-11-01-19.scaffold09-andrew-11-01-19;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -2087,18 +2089,20 @@ ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
 ImportUniformScale=1.000000
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/BlockOut
-MRUItem1=/Game/Models/David/diffuse
-MRUItem2=/Game/Models/David/02_-_Default
-MRUItem3=/Game/Models/Ben/1_handle_vase_Ben_Wilkinson_09-01-19
-MRUItem4=/Game/Materials/SandstoneMat2
-MRUItem5=/Game/Materials/Water
-MRUItem6=/Game/Materials/standstonenormal
-MRUItem7=/Game/Materials/SandstoneMat_Dark
-MRUItem8=/Game/Materials/standstone
-MRUItem9=/Game/Materials/SandstoneMat1
-MRUItem10=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem11=/Game/TopDownBP/Blueprints/TopDownCharacter2
+MRUItem0=/Game/Models/Dylan/BallandChain1_Dylan_10-01-19__1_
+MRUItem1=/Game/Levels/BlockOut
+MRUItem2=/Game/Models/Andrew/scaffold02-andrew-11-01-19
+MRUItem3=/Game/Models/David/diffuse
+MRUItem4=/Game/Models/David/02_-_Default
+MRUItem5=/Game/Models/Ben/1_handle_vase_Ben_Wilkinson_09-01-19
+MRUItem6=/Game/Materials/SandstoneMat2
+MRUItem7=/Game/Materials/Water
+MRUItem8=/Game/Materials/standstonenormal
+MRUItem9=/Game/Materials/SandstoneMat_Dark
+MRUItem10=/Game/Materials/standstone
+MRUItem11=/Game/Materials/SandstoneMat1
+MRUItem12=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem13=/Game/TopDownBP/Blueprints/TopDownCharacter2
 
 [/Script/UnrealEd.FbxImportUI]
 LodDistance0=0.000000
