--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -102,7 +102,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentRotGridSize=0
 CameraSpeed=3
 CurrentPosGridSize=0
-CurrentScalingGridSize=2
+CurrentScalingGridSize=1
 
 [MRU]
 MRUItem0=/Game/Levels/BlockOut
@@ -196,7 +196,7 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Models/Andrew
+ContentBrowserTab1.SelectedPaths=/Game/Models/Dylan
 
 [EditorStartup]
 LastLevel=/Game/Levels/BlockOut
@@ -1136,6 +1136,7 @@ StaticMesh.EditableMesh=True
 /Game/Models/Ben/1_handle_vase_Ben_Wilkinson_09-01-19.1_handle_vase_Ben_Wilkinson_09-01-19=1
 /Game/Models/Andrew/scaffold02-andrew-11-01-19.scaffold02-andrew-11-01-19=1
 /Game/Models/Dylan/BallandChain1_Dylan_10-01-19__1_.BallandChain1_Dylan_10-01-19__1_=1
+/Game/Models/David/diffuse.diffuse=1
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -1151,7 +1152,7 @@ ActorComponent=
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" \"Object.Blackboard.Keys.Keys[2]\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
-Brush=
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[8]\" \"Object.Bindings.ActionMappings.ActionMappings[10]\" \"Object.Bindings.ActionMappings.ActionMappings[11]\" "
@@ -1195,7 +1196,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=A:/test/SCollab-Proto/SP_Prototype/Content/Levels
+UNR=../../../../../../Users/c018840h/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -1921,6 +1922,15 @@ LastLogListing=FBXImport
 /Game/Models=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/Models/Dylan/Vase_4_Dylan_09_01_19.Vase_4_Dylan_09_01_19;
+RecentlyPlaced=/Game/Models/Dylan/Vase_2_Dylan_09_01_19.Vase_2_Dylan_09_01_19;
+RecentlyPlaced=/Game/Models/Dylan/Vase_3_Dylan_09_01_19.Vase_3_Dylan_09_01_19;
+RecentlyPlaced=/Game/Models/Dylan/Vase_5_Dylan_09_01_19.Vase_5_Dylan_09_01_19;
+RecentlyPlaced=/Game/Models/Dylan/Vase_1_Dylan_09_01_19.Vase_1_Dylan_09_01_19;
+RecentlyPlaced=/Game/Models/Dylan/Pickaxe_Dylan_10-01-19.Pickaxe_Dylan_10-01-19;
+RecentlyPlaced=/Game/Models/David/diffuse_Mat.diffuse_Mat;
+RecentlyPlaced=/Game/Models/David/02_-_Default.02_-_Default;
+RecentlyPlaced=/Game/Models/David/diffuse.diffuse;
 RecentlyPlaced=/Game/Models/Dylan/BallandChain1_Dylan_10-01-19__1_.BallandChain1_Dylan_10-01-19__1_;
 RecentlyPlaced=/Game/Models/Aaron/campfire-aaroncrossley-12-01-19.campfire-aaroncrossley-12-01-19;
 RecentlyPlaced=/Game/Models/Jack/Ladder-jack-14-01-19.Ladder-jack-14-01-19;
@@ -1932,15 +1942,6 @@ RecentlyPlaced=/Game/Models/David/crate-david-14-01-19.crate-david-14-01-19;
 RecentlyPlaced=/Game/Models/Ben/small_vase_Ben_Wilkinson_09-01-19.small_vase_Ben_Wilkinson_09-01-19;
 RecentlyPlaced=/Game/Models/Ben/cart_ben_wilkinson_10-01-19.cart_ben_wilkinson_10-01-19;
 RecentlyPlaced=/Game/Models/Andrew/scaffold01-andrew-11-01-19.scaffold01-andrew-11-01-19;
-RecentlyPlaced=/Game/Models/Ben/well_ben_wilkinson_10-01-19.well_ben_wilkinson_10-01-19;
-RecentlyPlaced=/Game/Models/Ben/cloth_cover_ben_wilkinson_10-01-19.cloth_cover_ben_wilkinson_10-01-19;
-RecentlyPlaced=/Game/Models/Chris/Cart_-_Chris_-_09-01-19.Cart_-_Chris_-_09-01-19;
-RecentlyPlaced=/Game/Models/Dylan/Shovel_Dylan_10-01-19.Shovel_Dylan_10-01-19;
-RecentlyPlaced=/Game/Models/Dylan/Pickaxe_Dylan_10-01-19.Pickaxe_Dylan_10-01-19;
-RecentlyPlaced=/Game/Models/Dylan/Vase_5_Dylan_09_01_19.Vase_5_Dylan_09_01_19;
-RecentlyPlaced=/Game/Models/David/LP_Crate.LP_Crate;
-RecentlyPlaced=/Game/Models/David/02_-_Default.02_-_Default;
-RecentlyPlaced=/Game/Models/Ben/1_handle_vase_Ben_Wilkinson_09-01-19.1_handle_vase_Ben_Wilkinson_09-01-19;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -1962,7 +1963,7 @@ ImportLandscape_AlphamapType=0
 ShowUnusedLayers=True
 
 [MaterialEditor]
-PrimType=3
+PrimType=1
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -2089,20 +2090,21 @@ ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
 ImportUniformScale=1.000000
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/BlockOut
-MRUItem1=/Game/Models/Dylan/BallandChain1_Dylan_10-01-19__1_
-MRUItem2=/Game/Models/Andrew/scaffold02-andrew-11-01-19
-MRUItem3=/Game/Models/David/diffuse
-MRUItem4=/Game/Models/David/02_-_Default
-MRUItem5=/Game/Models/Ben/1_handle_vase_Ben_Wilkinson_09-01-19
-MRUItem6=/Game/Materials/SandstoneMat2
-MRUItem7=/Game/Materials/Water
-MRUItem8=/Game/Materials/standstonenormal
-MRUItem9=/Game/Materials/SandstoneMat_Dark
-MRUItem10=/Game/Materials/standstone
-MRUItem11=/Game/Materials/SandstoneMat1
-MRUItem12=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem13=/Game/TopDownBP/Blueprints/TopDownCharacter2
+MRUItem0=/Game/Models/David/diffuse
+MRUItem1=/Game/Models/David/diffuse_Mat
+MRUItem2=/Game/Levels/BlockOut
+MRUItem3=/Game/Models/Dylan/BallandChain1_Dylan_10-01-19__1_
+MRUItem4=/Game/Models/Andrew/scaffold02-andrew-11-01-19
+MRUItem5=/Game/Models/David/02_-_Default
+MRUItem6=/Game/Models/Ben/1_handle_vase_Ben_Wilkinson_09-01-19
+MRUItem7=/Game/Materials/SandstoneMat2
+MRUItem8=/Game/Materials/Water
+MRUItem9=/Game/Materials/standstonenormal
+MRUItem10=/Game/Materials/SandstoneMat_Dark
+MRUItem11=/Game/Materials/standstone
+MRUItem12=/Game/Materials/SandstoneMat1
+MRUItem13=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem14=/Game/TopDownBP/Blueprints/TopDownCharacter2
 
 [/Script/UnrealEd.FbxImportUI]
 LodDistance0=0.000000
