Base Weapon Class Finished

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -139,16 +139,16 @@ SphereComponent=SphereComponent.Collision.Collision,
 TopDownCharacter_C=TopDownCharacter_C.Collision.Collision,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 AIbot_C=AIbot_C.Collision.Collision,
-K2Node_VariableGet=TopDownCharacter_C.Collision.Collision,
+K2Node_VariableGet=
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 ObjectProperty=
 FloatProperty=
 Perception_C=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
 StructProperty=TopDownCharacter_C.Collision.Collision,
-BoolProperty=TopDownCharacter_C.Collision.Collision,
+BoolProperty=
 ArrayProperty=
-IntProperty=TopDownCharacter_C.Collision.Collision,
-K2Node_VariableSet=TopDownCharacter_C.Collision.Collision,
+IntProperty=
+K2Node_VariableSet=
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -172,6 +172,7 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
+ContentBrowserTab1.SelectedPaths=/Game/GW000979/DataStruct
 
 [EditorStartup]
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
@@ -1763,6 +1764,24 @@ REINST_TopDownCharacter_C_112.Camera=True
 REINST_TopDownCharacter_C_112.Pawn=True
 REINST_TopDownCharacter_C_112.Input=True
 REINST_TopDownCharacter_C_112.Actor=True
+BaseWeapon_C.Tick=True
+BaseWeapon_C.Default=True
+BaseWeapon_C.Rendering=True
+BaseWeapon_C.Replication=True
+BaseWeapon_C.Input=True
+BaseWeapon_C.Actor=True
+K2Node_MakeStruct.PinOptions=True
+NameProperty.Variable=True
+NameProperty.DefaultValueCategory=True
+Weapon_Struct.None=True
+Generic.None=True
+StrProperty.Variable=True
+StrProperty.DefaultValueCategory=True
+BaseWeapon_C.TransformCommon=True
+UserDefinedStruct.Structure=True
+UserDefinedStruct.DefaultValues=True
+UserDefinedEnum.Enumerators=True
+UserDefinedEnum.Description=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -1793,6 +1812,10 @@ REINST_TopDownCharacter_C_112.Actor=True
 /Game/AIAgent/Proto_controller.Proto_controller=0
 /Game/AIAgent/AIbot.AIbot=0
 /Game/AIAgent/NewAITree.NewAITree=0
+/Game/GW000979/DataStruct/BaseWeapon.BaseWeapon=1
+/Game/GW000979/DataStruct/WeaponDataTable.WeaponDataTable=1
+/Game/GW000979/DataStruct/Weapon_Struct.Weapon_Struct=1
+/Game/GW000979/DataStruct/DamageType.DamageType=1
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -1867,7 +1890,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/wstan/Desktop/Github/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
+UNR=../../../../../../Users/gw000979/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -2469,6 +2492,8 @@ ClothingSystemEditorInterface.TimeStamp=2018.09.07-09.34.18
 ClothingSystemEditorInterface.LastCompileMethod=Unknown
 NewLevelDialog.TimeStamp=2018.06.09-14.06.59
 NewLevelDialog.LastCompileMethod=Unknown
+DataTableEditor.TimeStamp=2018.05.14-10.37.16
+DataTableEditor.LastCompileMethod=Unknown
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -2517,6 +2542,7 @@ LastLogListing=PIE
 /Game/Materials=(R=0.500000,G=0.240541,B=0.050361,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/GW000979/DataStruct/BaseWeapon.BaseWeapon;
 RecentlyPlaced=/Game/SpawnActor/SpawnPoint.SpawnPoint;
 RecentlyPlaced=/Game/AIAgent/AIbot.AIbot;
 RecentlyPlaced=/Game/AIAgent/TestPawn.TestPawn;
