--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -101,12 +101,14 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",BufferVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowFPS=False,bShowOnScreenStats=False,EnabledStats=,bShowFullToolbar=True))
 CurrentRotGridSize=0
 CameraSpeed=3
-CurrentPosGridSize=0
+CurrentPosGridSize=1
 CurrentScalingGridSize=1
 
 [MRU]
 MRUItem0=/Game/Levels/BlockOut
-MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem1=/Game/Levels/assetlayout
+MRUItem2=/Game/Levels/Assetslayout
+MRUItem3=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.ActionMappings.HeavyAttack,InputSettings.Bindings.ActionMappings.LightAttack,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Pause,
@@ -173,6 +175,7 @@ FloatProperty=TopDownCharacter_C.Collision.Collision,
 K2Node_VariableGet=
 K2Node_VariableSet=TopDownCharacter_C.Collision.Collision,
 ObjectProperty=
+StaticMesh=StaticMesh.Collision.Collision,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -196,7 +199,7 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Models/Dylan
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 
 [EditorStartup]
 LastLevel=/Game/Levels/BlockOut
@@ -1093,6 +1096,18 @@ MaterialExpression.MaterialExpression=True
 MaterialExpressionAdd.MaterialExpressionAdd=True
 MaterialExpressionAdd.MaterialExpression=True
 StaticMesh.EditableMesh=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+SphereReflectionCapture.TransformCommon=True
+SphereReflectionCapture.ReflectionCapture=True
+SphereReflectionCapture.Rendering=True
+SphereReflectionCapture.Tags=True
+SphereReflectionCapture.Cooking=True
+SphereReflectionCapture.Input=True
+Actor.Rendering=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -1137,6 +1152,7 @@ StaticMesh.EditableMesh=True
 /Game/Models/Andrew/scaffold02-andrew-11-01-19.scaffold02-andrew-11-01-19=1
 /Game/Models/Dylan/BallandChain1_Dylan_10-01-19__1_.BallandChain1_Dylan_10-01-19__1_=1
 /Game/Models/David/diffuse.diffuse=1
+/Game/Materials/white.white=1
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -1206,7 +1222,7 @@ GenericOpen=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 GenericSave=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 MeshImportExport=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 WorldRoot=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
-Level=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
+Level=../../../../../../Users/c018840h/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
 Project=E:/Program Files/UE_4.19/
 
 [ModuleFileTracking]
@@ -1796,8 +1812,8 @@ PinnedCommandList.TimeStamp=2018.09.07-09.34.37
 PinnedCommandList.LastCompileMethod=Unknown
 ClothingSystemEditorInterface.TimeStamp=2018.09.07-09.34.18
 ClothingSystemEditorInterface.LastCompileMethod=Unknown
-NewLevelDialog.TimeStamp=2018.06.09-14.06.59
-NewLevelDialog.LastCompileMethod=Unknown
+NewLevelDialog.TimeStamp=2018.09.20-07.56.15
+NewLevelDialog.LastCompileMethod=External
 SequencerWidgets.TimeStamp=2018.05.14-10.37.26
 SequencerWidgets.LastCompileMethod=Unknown
 SynthBenchmark.TimeStamp=2018.05.14-10.37.28
@@ -1872,6 +1888,8 @@ Voice.TimeStamp=2018.10.05-18.10.29
 Voice.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2018.10.05-18.09.50
 TextureEditor.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2018.09.20-07.56.12
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1922,26 +1940,26 @@ LastLogListing=FBXImport
 /Game/Models=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
 
 [PlacementMode]
-RecentlyPlaced=/Game/Models/Dylan/Vase_4_Dylan_09_01_19.Vase_4_Dylan_09_01_19;
-RecentlyPlaced=/Game/Models/Dylan/Vase_2_Dylan_09_01_19.Vase_2_Dylan_09_01_19;
-RecentlyPlaced=/Game/Models/Dylan/Vase_3_Dylan_09_01_19.Vase_3_Dylan_09_01_19;
-RecentlyPlaced=/Game/Models/Dylan/Vase_5_Dylan_09_01_19.Vase_5_Dylan_09_01_19;
-RecentlyPlaced=/Game/Models/Dylan/Vase_1_Dylan_09_01_19.Vase_1_Dylan_09_01_19;
-RecentlyPlaced=/Game/Models/Dylan/Pickaxe_Dylan_10-01-19.Pickaxe_Dylan_10-01-19;
-RecentlyPlaced=/Game/Models/David/diffuse_Mat.diffuse_Mat;
-RecentlyPlaced=/Game/Models/David/02_-_Default.02_-_Default;
-RecentlyPlaced=/Game/Models/David/diffuse.diffuse;
-RecentlyPlaced=/Game/Models/Dylan/BallandChain1_Dylan_10-01-19__1_.BallandChain1_Dylan_10-01-19__1_;
-RecentlyPlaced=/Game/Models/Aaron/campfire-aaroncrossley-12-01-19.campfire-aaroncrossley-12-01-19;
+RecentlyPlaced=/Game/Models/Jack/01_-_Default6.01_-_Default6;
+RecentlyPlaced=/Game/Models/Jack/Rock_Rubble_3.Rock_Rubble_3;
+RecentlyPlaced=/Game/Models/Jack/01_-_Default7.01_-_Default7;
+RecentlyPlaced=/Game/Models/Jack/Rock_Form_3.Rock_Form_3;
+RecentlyPlaced=/Game/Models/Jack/Rock_Form_2.Rock_Form_2;
+RecentlyPlaced=/Game/Models/Jack/Rock_Form_1.Rock_Form_1;
 RecentlyPlaced=/Game/Models/Jack/Ladder-jack-14-01-19.Ladder-jack-14-01-19;
-RecentlyPlaced=/Game/Models/Dylan/RopeCoil_Dylan_10-01-19__1_.RopeCoil_Dylan_10-01-19__1_;
-RecentlyPlaced=/Game/Models/Andrew/scaffold05-andrew-11-01-19.scaffold05-andrew-11-01-19;
-RecentlyPlaced=/Game/Models/Andrew/scaffold06-andrew-11-01-19.scaffold06-andrew-11-01-19;
-RecentlyPlaced=/Game/Models/Ben/2_handle_vase_Ben_Wilkinson_09-01-19.2_handle_vase_Ben_Wilkinson_09-01-19;
-RecentlyPlaced=/Game/Models/David/crate-david-14-01-19.crate-david-14-01-19;
-RecentlyPlaced=/Game/Models/Ben/small_vase_Ben_Wilkinson_09-01-19.small_vase_Ben_Wilkinson_09-01-19;
-RecentlyPlaced=/Game/Models/Ben/cart_ben_wilkinson_10-01-19.cart_ben_wilkinson_10-01-19;
-RecentlyPlaced=/Game/Models/Andrew/scaffold01-andrew-11-01-19.scaffold01-andrew-11-01-19;
+RecentlyPlaced=/Game/Models/Jack/Crystal_Tiny_Boi_2.Crystal_Tiny_Boi_2;
+RecentlyPlaced=/Game/Models/Jack/Crystal_Smol_2.Crystal_Smol_2;
+RecentlyPlaced=/Game/Models/Jack/Crystal_Smol_1.Crystal_Smol_1;
+RecentlyPlaced=/Game/Models/Jack/01_-_Default8.01_-_Default8;
+RecentlyPlaced=/Game/Models/Jack/01_-_Default3.01_-_Default3;
+RecentlyPlaced=/Game/Models/Jack/Crystal_Realistic_2.Crystal_Realistic_2;
+RecentlyPlaced=/Game/Models/Jack/Crystal_realistic_1.Crystal_realistic_1;
+RecentlyPlaced=/Game/Models/Dylan/Vase_5_Dylan_09_01_19.Vase_5_Dylan_09_01_19;
+RecentlyPlaced=/Game/Models/Dylan/Vase_4_Dylan_09_01_19.Vase_4_Dylan_09_01_19;
+RecentlyPlaced=/Game/Models/Dylan/Vase_3_Dylan_09_01_19.Vase_3_Dylan_09_01_19;
+RecentlyPlaced=/Game/Models/Dylan/Vase_2_Dylan_09_01_19.Vase_2_Dylan_09_01_19;
+RecentlyPlaced=/Game/Models/Dylan/Vase_1_Dylan_09_01_19.Vase_1_Dylan_09_01_19;
+RecentlyPlaced=/Game/Models/Dylan/Shovel_Dylan_10-01-19.Shovel_Dylan_10-01-19;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -2090,21 +2108,26 @@ ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
 ImportUniformScale=1.000000
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Models/David/diffuse
-MRUItem1=/Game/Models/David/diffuse_Mat
-MRUItem2=/Game/Levels/BlockOut
-MRUItem3=/Game/Models/Dylan/BallandChain1_Dylan_10-01-19__1_
-MRUItem4=/Game/Models/Andrew/scaffold02-andrew-11-01-19
-MRUItem5=/Game/Models/David/02_-_Default
-MRUItem6=/Game/Models/Ben/1_handle_vase_Ben_Wilkinson_09-01-19
-MRUItem7=/Game/Materials/SandstoneMat2
-MRUItem8=/Game/Materials/Water
-MRUItem9=/Game/Materials/standstonenormal
-MRUItem10=/Game/Materials/SandstoneMat_Dark
-MRUItem11=/Game/Materials/standstone
-MRUItem12=/Game/Materials/SandstoneMat1
-MRUItem13=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem14=/Game/TopDownBP/Blueprints/TopDownCharacter2
+MRUItem0=/Game/Levels/BlockOut
+MRUItem1=/Game/Materials/white
+MRUItem2=/Game/Levels/Assetslayout
+MRUItem3=/Game/Models/Jack/Rock_Form_1
+MRUItem4=/Game/Models/Jack/Rock_Form_2
+MRUItem5=/Game/Models/Jack/Rock_Form_3
+MRUItem6=/Game/Models/David/diffuse
+MRUItem7=/Game/Models/David/diffuse_Mat
+MRUItem8=/Game/Models/Dylan/BallandChain1_Dylan_10-01-19__1_
+MRUItem9=/Game/Models/Andrew/scaffold02-andrew-11-01-19
+MRUItem10=/Game/Models/David/02_-_Default
+MRUItem11=/Game/Models/Ben/1_handle_vase_Ben_Wilkinson_09-01-19
+MRUItem12=/Game/Materials/SandstoneMat2
+MRUItem13=/Game/Materials/Water
+MRUItem14=/Game/Materials/standstonenormal
+MRUItem15=/Game/Materials/SandstoneMat_Dark
+MRUItem16=/Game/Materials/standstone
+MRUItem17=/Game/Materials/SandstoneMat1
+MRUItem18=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem19=/Game/TopDownBP/Blueprints/TopDownCharacter2
 
 [/Script/UnrealEd.FbxImportUI]
 LodDistance0=0.000000
