Updated controller/fixed door switch

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -141,14 +141,14 @@ LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 AIbot_C=AIbot_C.Collision.Collision,
 K2Node_VariableGet=
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
-ObjectProperty=
+ObjectProperty=TopDownCharacter_C.Collision.Collision,
 FloatProperty=
 Perception_C=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
 StructProperty=TopDownCharacter_C.Collision.Collision,
 BoolProperty=
 ArrayProperty=
 IntProperty=
-K2Node_VariableSet=
+K2Node_VariableSet=TopDownCharacter_C.Collision.Collision,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -172,13 +172,20 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/GW000979/DataStruct
+ContentBrowserTab1.SelectedPaths=/Game/AIAgent
 
 [EditorStartup]
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/PlayerControl.PlayerControl
+OpenAssetsAtExit=/Game/TopDownBP/Interactexample/Switch.Switch
+OpenAssetsAtExit=/Game/TopDownBP/Interactexample/Door.Door
+OpenAssetsAtExit=/Game/TopDownBP/Interfaces/PlayerInt.PlayerInt
+OpenAssetsAtExit=/Game/AIAgent/AttackPlayer.AttackPlayer
+OpenAssetsAtExit=/Game/AIAgent/TestPawn2.TestPawn2
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -1782,6 +1789,21 @@ UserDefinedStruct.Structure=True
 UserDefinedStruct.DefaultValues=True
 UserDefinedEnum.Enumerators=True
 UserDefinedEnum.Description=True
+Switch_C.Tick=True
+Switch_C.Default=True
+Switch_C.Rendering=True
+Switch_C.Replication=True
+Switch_C.Input=True
+Switch_C.Actor=True
+Door_C.Tick=True
+Door_C.Rendering=True
+Door_C.Replication=True
+Door_C.Input=True
+Door_C.Actor=True
+K2Node_InputAction.Input=True
+TestPawn2_C.Default=True
+Switch_C.TransformCommon=True
+Door_C.TransformCommon=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -1848,7 +1870,7 @@ AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Percept
 TestPawn_C="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 NewController_C="\"Object.Controller.Controller"
 AIController="\"Object.Default.DebugColour\" \"Object.Controller.Controller"
-Controller="\"Object.Default.DebugColour\" \"Object.Controller.Controller"
+Controller=
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 TopDownCharacter_C=
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -1866,6 +1888,7 @@ REINST_TestPawn2_C_280="\"Object.Character.CharacterMovement.Object.Character Mo
 REINST_TestPawn2_C_290="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn2_C_294="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn2_C_298="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[14]\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -1890,7 +1913,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/gw000979/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
+UNR=../../../../../../Users/t019847g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
