--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1782,6 +1782,231 @@ UserDefinedStruct.Structure=True
 UserDefinedStruct.DefaultValues=True
 UserDefinedEnum.Enumerators=True
 UserDefinedEnum.Description=True
+Inventory_C.ComponentTick=True
+Inventory_C.Tags=True
+Inventory_C.ComponentReplication=True
+Inventory_C.Activation=True
+Inventory_C.Variable=True
+Inventory_C.Cooking=True
+ClassProperty.Variable=True
+ClassProperty.DefaultValueCategory=True
+TopDownCharacterTest_C.Default=True
+TopDownCharacterTest_C.Tick=True
+TopDownCharacterTest_C.Character=True
+TopDownCharacterTest_C.Camera=True
+TopDownCharacterTest_C.Pawn=True
+TopDownCharacterTest_C.Rendering=True
+TopDownCharacterTest_C.Replication=True
+TopDownCharacterTest_C.Input=True
+TopDownCharacterTest_C.Actor=True
+MapProperty.Variable=True
+MapProperty.DefaultValueCategory=True
+K2Node_GetClassDefaults.PinOptions=True
+Inventory_C.Sockets=True
+Inventory_C.Default=True
+Inventory_C.Events=True
+TopDownCharacterTest_C.TransformCommon=True
+TopDownCharacterTest_C.Animation=True
+TopDownCharacterTest_C.Mesh=True
+TopDownCharacterTest_C.Clothing=True
+TopDownCharacterTest_C.Physics=True
+TopDownCharacterTest_C.Collision=True
+TopDownCharacterTest_C.ClothingSimulation=True
+TopDownCharacterTest_C.Lighting=True
+TopDownCharacterTest_C.Tags=True
+TopDownCharacterTest_C.Activation=True
+TopDownCharacterTest_C.Cooking=True
+TopDownCharacterTest_C.Character Movement: Jumping / Falling=True
+TopDownCharacterTest_C.Character Movement (General Settings)=True
+TopDownCharacterTest_C.Character Movement: Walking=True
+TopDownCharacterTest_C.Character Movement: Swimming=True
+TopDownCharacterTest_C.Character Movement: Flying=True
+TopDownCharacterTest_C.Character Movement: Custom Movement=True
+TopDownCharacterTest_C.Character Movement (Rotation Settings)=True
+TopDownCharacterTest_C.Character Movement: Physics Interaction=True
+TopDownCharacterTest_C.Character Movement (Networking)=True
+TopDownCharacterTest_C.Character Movement=True
+TopDownCharacterTest_C.Character Movement: Avoidance=True
+TopDownCharacterTest_C.Character Movement: NavMesh Movement=True
+TopDownCharacterTest_C.RootMotion=True
+TopDownCharacterTest_C.NavMovement=True
+TopDownCharacterTest_C.Velocity=True
+TopDownCharacterTest_C.PlanarMovement=True
+TopDownCharacterTest_C.MovementComponent=True
+TopDownCharacterTest_C.Shape=True
+TopDownCharacterTest_C.Navigation=True
+TopDownCharacterTest_C.Materials=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+TopDownCharacterTest_C.Variable=True
+TopDownCharacterTest_C.Sockets=True
+TopDownCharacterTest_C.ComponentReplication=True
+TopDownCharacterTest_C.Events=True
+SkeletalMeshComponent.Variable=True
+SkeletalMeshComponent.TransformCommon=True
+SkeletalMeshComponent.Sockets=True
+SkeletalMeshComponent.Animation=True
+SkeletalMeshComponent.Mesh=True
+SkeletalMeshComponent.Clothing=True
+SkeletalMeshComponent.ClothingSimulation=True
+SkeletalMeshComponent.Physics=True
+SkeletalMeshComponent.Collision=True
+SkeletalMeshComponent.Lighting=True
+SkeletalMeshComponent.Rendering=True
+SkeletalMeshComponent.Tags=True
+SkeletalMeshComponent.ComponentReplication=True
+SkeletalMeshComponent.Activation=True
+SkeletalMeshComponent.Cooking=True
+SkeletalMeshComponent.Events=True
+SkeletalMesh.Material Slots=False
+SkeletalMesh.LODCustomMode=False
+SkeletalMesh.LOD0=False
+SkeletalMesh.LodSettings=False
+SkeletalMesh.Clothing=False
+SkeletalMesh.Mesh=False
+SkeletalMesh.Physics=False
+SkeletalMesh.SkeletalMesh=False
+SkeletalMesh.Lighting=False
+SkeletalMesh.Animation=False
+SkeletalMesh.ImportSettings=False
+SkeletalMesh.Sampling=False
+PersonaPreviewSceneDescription.Animation=True
+PersonaPreviewSceneDescription.Additional Meshes=True
+SkeletalMesh.Thumbnail=False
+REINST_TopDownCharacterTest_C_103.TransformCommon=True
+REINST_TopDownCharacterTest_C_103.Animation=True
+REINST_TopDownCharacterTest_C_103.Mesh=True
+REINST_TopDownCharacterTest_C_103.Clothing=True
+REINST_TopDownCharacterTest_C_103.Physics=True
+REINST_TopDownCharacterTest_C_103.Collision=True
+REINST_TopDownCharacterTest_C_103.ClothingSimulation=True
+REINST_TopDownCharacterTest_C_103.Lighting=True
+REINST_TopDownCharacterTest_C_103.Rendering=True
+REINST_TopDownCharacterTest_C_103.Tags=True
+REINST_TopDownCharacterTest_C_103.Activation=True
+REINST_TopDownCharacterTest_C_103.Cooking=True
+REINST_TopDownCharacterTest_C_103.Character Movement: Jumping / Falling=True
+REINST_TopDownCharacterTest_C_103.Character Movement (General Settings)=True
+REINST_TopDownCharacterTest_C_103.Character Movement: Walking=True
+REINST_TopDownCharacterTest_C_103.Character Movement: Swimming=True
+REINST_TopDownCharacterTest_C_103.Character Movement: Flying=True
+REINST_TopDownCharacterTest_C_103.Character Movement: Custom Movement=True
+REINST_TopDownCharacterTest_C_103.Character Movement (Rotation Settings)=True
+REINST_TopDownCharacterTest_C_103.Character Movement: Physics Interaction=True
+REINST_TopDownCharacterTest_C_103.Character Movement (Networking)=True
+REINST_TopDownCharacterTest_C_103.Character Movement=True
+REINST_TopDownCharacterTest_C_103.Character Movement: Avoidance=True
+REINST_TopDownCharacterTest_C_103.Character Movement: NavMesh Movement=True
+REINST_TopDownCharacterTest_C_103.RootMotion=True
+REINST_TopDownCharacterTest_C_103.NavMovement=True
+REINST_TopDownCharacterTest_C_103.Velocity=True
+REINST_TopDownCharacterTest_C_103.PlanarMovement=True
+REINST_TopDownCharacterTest_C_103.MovementComponent=True
+REINST_TopDownCharacterTest_C_103.Shape=True
+REINST_TopDownCharacterTest_C_103.Navigation=True
+REINST_TopDownCharacterTest_C_103.Character=True
+REINST_TopDownCharacterTest_C_103.Camera=True
+REINST_TopDownCharacterTest_C_103.Pawn=True
+REINST_TopDownCharacterTest_C_103.Input=True
+REINST_TopDownCharacterTest_C_103.Actor=True
+TestMesh_C.Tick=True
+TestMesh_C.Rendering=True
+TestMesh_C.Replication=True
+TestMesh_C.Input=True
+TestMesh_C.Actor=True
+TestMesh_C.TransformCommon=True
+REINST_TopDownCharacterTest_C_131.TransformCommon=True
+REINST_TopDownCharacterTest_C_131.Animation=True
+REINST_TopDownCharacterTest_C_131.Mesh=True
+REINST_TopDownCharacterTest_C_131.Clothing=True
+REINST_TopDownCharacterTest_C_131.Physics=True
+REINST_TopDownCharacterTest_C_131.Collision=True
+REINST_TopDownCharacterTest_C_131.ClothingSimulation=True
+REINST_TopDownCharacterTest_C_131.Lighting=True
+REINST_TopDownCharacterTest_C_131.Rendering=True
+REINST_TopDownCharacterTest_C_131.Tags=True
+REINST_TopDownCharacterTest_C_131.Activation=True
+REINST_TopDownCharacterTest_C_131.Cooking=True
+REINST_TopDownCharacterTest_C_131.Character Movement: Jumping / Falling=True
+REINST_TopDownCharacterTest_C_131.Character Movement (General Settings)=True
+REINST_TopDownCharacterTest_C_131.Character Movement: Walking=True
+REINST_TopDownCharacterTest_C_131.Character Movement: Swimming=True
+REINST_TopDownCharacterTest_C_131.Character Movement: Flying=True
+REINST_TopDownCharacterTest_C_131.Character Movement: Custom Movement=True
+REINST_TopDownCharacterTest_C_131.Character Movement (Rotation Settings)=True
+REINST_TopDownCharacterTest_C_131.Character Movement: Physics Interaction=True
+REINST_TopDownCharacterTest_C_131.Character Movement (Networking)=True
+REINST_TopDownCharacterTest_C_131.Character Movement=True
+REINST_TopDownCharacterTest_C_131.Character Movement: Avoidance=True
+REINST_TopDownCharacterTest_C_131.Character Movement: NavMesh Movement=True
+REINST_TopDownCharacterTest_C_131.RootMotion=True
+REINST_TopDownCharacterTest_C_131.NavMovement=True
+REINST_TopDownCharacterTest_C_131.Velocity=True
+REINST_TopDownCharacterTest_C_131.PlanarMovement=True
+REINST_TopDownCharacterTest_C_131.MovementComponent=True
+REINST_TopDownCharacterTest_C_131.Shape=True
+REINST_TopDownCharacterTest_C_131.Navigation=True
+REINST_TopDownCharacterTest_C_131.Character=True
+REINST_TopDownCharacterTest_C_131.Camera=True
+REINST_TopDownCharacterTest_C_131.Pawn=True
+REINST_TopDownCharacterTest_C_131.Input=True
+REINST_TopDownCharacterTest_C_131.Actor=True
+REINST_TopDownCharacterTest_C_137.TransformCommon=True
+REINST_TopDownCharacterTest_C_137.Animation=True
+REINST_TopDownCharacterTest_C_137.Mesh=True
+REINST_TopDownCharacterTest_C_137.None=True
+REINST_TopDownCharacterTest_C_137.Physics=True
+REINST_TopDownCharacterTest_C_137.Clothing=True
+REINST_TopDownCharacterTest_C_137.Collision=True
+REINST_TopDownCharacterTest_C_137.Lighting=True
+REINST_TopDownCharacterTest_C_137.ClothingSimulation=True
+REINST_TopDownCharacterTest_C_137.Rendering=True
+REINST_TopDownCharacterTest_C_137.Tags=True
+REINST_TopDownCharacterTest_C_137.Activation=True
+REINST_TopDownCharacterTest_C_137.Cooking=True
+REINST_TopDownCharacterTest_C_137.Character Movement: Jumping / Falling=True
+REINST_TopDownCharacterTest_C_137.Character Movement (General Settings)=True
+REINST_TopDownCharacterTest_C_137.Character Movement: Walking=True
+REINST_TopDownCharacterTest_C_137.Character Movement: Swimming=True
+REINST_TopDownCharacterTest_C_137.Character Movement: Flying=True
+REINST_TopDownCharacterTest_C_137.Character Movement: Custom Movement=True
+REINST_TopDownCharacterTest_C_137.Character Movement (Rotation Settings)=True
+REINST_TopDownCharacterTest_C_137.Character Movement: Physics Interaction=True
+REINST_TopDownCharacterTest_C_137.Character Movement (Networking)=True
+REINST_TopDownCharacterTest_C_137.Character Movement=True
+REINST_TopDownCharacterTest_C_137.Character Movement: Avoidance=True
+REINST_TopDownCharacterTest_C_137.Character Movement: NavMesh Movement=True
+REINST_TopDownCharacterTest_C_137.RootMotion=True
+REINST_TopDownCharacterTest_C_137.NavMovement=True
+REINST_TopDownCharacterTest_C_137.Velocity=True
+REINST_TopDownCharacterTest_C_137.PlanarMovement=True
+REINST_TopDownCharacterTest_C_137.MovementComponent=True
+REINST_TopDownCharacterTest_C_137.Shape=True
+REINST_TopDownCharacterTest_C_137.Navigation=True
+REINST_TopDownCharacterTest_C_137.Character=True
+REINST_TopDownCharacterTest_C_137.Camera=True
+REINST_TopDownCharacterTest_C_137.Pawn=True
+REINST_TopDownCharacterTest_C_137.Input=True
+REINST_TopDownCharacterTest_C_137.Actor=True
+SkeletalMeshActor.TransformCommon=True
+SkeletalMeshActor.Animation=True
+SkeletalMeshActor.Mesh=True
+SkeletalMeshActor.Materials=True
+SkeletalMeshActor.Physics=True
+SkeletalMeshActor.Clothing=True
+SkeletalMeshActor.Collision=True
+SkeletalMeshActor.ClothingSimulation=True
+SkeletalMeshActor.Lighting=True
+SkeletalMeshActor.Rendering=True
+SkeletalMeshActor.Tags=True
+SkeletalMeshActor.Activation=True
+SkeletalMeshActor.Cooking=True
+SkeletalMeshActor.Input=True
+SkeletalMeshActor.Actor=True
+SkeletalMeshComponent.Materials=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -1816,6 +2041,14 @@ UserDefinedEnum.Description=True
 /Game/GW000979/DataStruct/WeaponDataTable.WeaponDataTable=1
 /Game/GW000979/DataStruct/Weapon_Struct.Weapon_Struct=1
 /Game/GW000979/DataStruct/DamageType.DamageType=1
+/Game/GW000979/TopDownCharacterTest.TopDownCharacterTest=1
+/Game/TopDownBP/Blueprints/TopDownCharacter2.TopDownCharacter2=1
+/Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
+/Game/GW000979/DataStruct/InventoryInt.InventoryInt=1
+/Game/Mannequin/Character/Mesh/SK_Mannequin.SK_Mannequin=1
+/Game/GW000979/SK_Mannequin_2.SK_Mannequin_2=1
+/Game/GW000979/DataStruct/Inventory.Inventory=1
+/Game/GW000979/TestMesh.TestMesh=1
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -1823,13 +2056,13 @@ InstalledPlugins=Substance
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 Object=
-SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
+SphereComponent=
 ShapeComponent=
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
-DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
+DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2524,6 +2757,8 @@ AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeInd
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletonEditor",Commands=)
 Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
+Contexts=(Name="SkeletalMeshEditor",Commands=)
+Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
 
 [FBX_Export_UI_Option_FbxExportOption]
 FbxExportCompatibility=FBX_2013
@@ -2542,6 +2777,9 @@ LastLogListing=PIE
 /Game/Materials=(R=0.500000,G=0.240541,B=0.050361,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/GW000979/TopDownCharacterTest.TopDownCharacterTest;
+RecentlyPlaced=/Game/GW000979/SK_Mannequin_2.SK_Mannequin_2;
+RecentlyPlaced=/Game/GW000979/TestMesh.TestMesh;
 RecentlyPlaced=/Game/GW000979/DataStruct/BaseWeapon.BaseWeapon;
 RecentlyPlaced=/Game/SpawnActor/SpawnPoint.SpawnPoint;
 RecentlyPlaced=/Game/AIAgent/AIbot.AIbot;
@@ -2600,5 +2838,8 @@ PaletteThumbnailScale=0.300000
 
 [SelectionDetails]
 PreserveScaleRatio=True
+
+[SuppressableDialogs]
+ChangeVariableType_Warning=False
 
 
